--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "redux-saga": "^1.3.0",
+    "redux-saga-firebase": "^0.15.0",
     "rxjs": "^7.8.1",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
